<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BL API Test</string>
    <string name="intro">BlockLauncher\'s API Tester</string>
    <string name="test_patch">Test patch import</string>
    <string name="test_script">Test ModPE Script import</string>
    <string name="test_texturepack">Test texturepack import</string>
    <string name="test_skin">Test skin import</string>
    <string name="blocklauncher_failed">BlockLauncher couldn\'t recognize our request. Make sure you have correctly installed, latest genuine copy of BL.</string>
    <string name="blocklauncher_not_installed">BlockLauncher isn\'t installed. Please, install it.</string>
    <string name="blocklauncher_version">BL version: </string>
    <string name="copyrights">Copyrights:
\n* BlockLauncher: Zhuowei Zhang.
\n* Patch(Fly in survival): Kyurem838.
\n* Script(ColorChat): Zhuowei Zhang.
\n* Skin(Anakin Skywalker): unknown.
\n* Texturepack(Modified Slickcraft): Zhuowei Zhang.</string>
    <string name="run">Run</string>

</resources>